--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,72 +1,18 @@
-name: Build and Release
+- name: Upload a Build Artifact
+  uses: actions/upload-artifact@v3.0.0
+  with:
+    # Artifact name
+    name: # optional, default is artifact
+    # A file, directory or wildcard pattern that describes what to upload
+    path: 
+    # The desired behavior if no files are found using the provided path.
+Available Options:
+  warn: Output a warning but do not fail the action
+  error: Fail the action with an error message
+  ignore: Do not output any warnings or errors, the action does not fail
 
-on:
- push:
-   branches:
-     - master
-     - "feature/*"
-   tags:
-     - "v*.*.*"
- pull_request:
-   branches:
-     - master
-     - "feature/*"
+    if-no-files-found: # optional, default is warn
+    # Duration after which artifact will expire in days. 0 means using default retention.
+Minimum 1 day. Maximum 90 days unless changed from the repository settings page.
 
-jobs:
- apk:
-   name: Generate APK
-   runs-on: ubuntu-latest
-   steps:
-     - name: Checkout
-       uses: actions/checkout@v2.4.0
-     - name: Branch name
-       run: echo running on branch ${GITHUB_REF##*/}
-     - name: Setup JDK
-       uses: actions/setup-java@v2.5.0
-       with:
-         distribution: temurin
-         java-version: "11"
-     - name: Set execution flag for gradlew
-       run: chmod +x gradlew
-     - name: Build APK
-       run: bash ./gradlew assembleDebug --stacktrace
-     - name: Upload APK
-       uses: actions/upload-artifact@v1
-       with:
-         name: apk
-         path: app/build/outputs/apk/debug/app-debug.apk
-
- release:
-   name: Release APK
-   needs: apk
-   runs-on: ubuntu-latest
-   steps:
-     - name: Get branch name
-       id: branch-name
-       uses: tj-actions/branch-names@v5.1
-     - name: Print branch    
-       run: |
-         echo "Running on default: ${{ steps.branch-name.outputs.current_branch }}"
-       
-     - name: Download APK from build
-       uses: actions/download-artifact@v1
-       with:
-         name: apk
-     - name: Create Release
-       id: create_release
-       uses: actions/create-release@v1
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         tag_name: ${{ github.run_number }}
-         release_name: ${{ github.event.repository.name }}  ${{ steps.branch-name.outputs.current_branch }} v${{ github.run_number }}.${{ github.run_attempt }}
-     - name: Upload Release APK
-       id: upload_release_asset
-       uses: actions/upload-release-asset@v1.0.1
-       env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         upload_url: ${{ steps.create_release.outputs.upload_url }}
-         asset_path: apk/app-debug.apk
-         asset_name: ${{ github.event.repository.name }}  ${{ steps.branch-name.outputs.current_branch }} v${{ github.run_number }}.${{ github.run_attempt }}.apk
-         asset_content_type: application/zip
+    retention-days: # optional
